After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 774878 - tag: fix some warnings in mklicensestables
tag: fix some warnings in mklicensestables
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.11.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-11-22 21:13 UTC by Scott D Phillips
Modified: 2016-11-23 08:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH gst-plugins-base] tag: fix some warnings in mklicensestables (1.18 KB, patch)
2016-11-22 21:14 UTC, Scott D Phillips
committed Details | Review

Description Scott D Phillips 2016-11-22 21:13:50 UTC
code path without returning a value in ref_to_jurisdiction(), empty if-clause in main().
Comment 1 Scott D Phillips 2016-11-22 21:14:56 UTC
Created attachment 340554 [details] [review]
[PATCH gst-plugins-base] tag: fix some warnings in mklicensestables
Comment 2 Sebastian Dröge (slomo) 2016-11-23 08:20:24 UTC
commit c2dd0149c93c2e2433961df40c94d06765b1c0a5
Author: Scott D Phillips <scott.d.phillips@intel.com>
Date:   Tue Nov 22 21:12:23 2016 -0800

    tag: fix some warnings in mklicensestables
    
    https://bugzilla.gnome.org/show_bug.cgi?id=774878