tag: fix some warnings in mklicensestables

https://bugzilla.gnome.org/show_bug.cgi?id=774878